--- a/assets/style.css
+++ b/assets/style.css
@@ -66,7 +66,7 @@ ul {
     padding:6px 48px;
     font-weight: normal;
     border-style: solid;
-    border-color:#d8d5d0;
+    border-color:#bab29f;
     border-width: 0.5px;
     cursor:pointer;
 }
